<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/preferences_title">
    <PreferenceCategory android:title="@string/preferences_network">
        <com.radiobattletoads.player2.EditBufferPreference 
    android:id="@+id/preferences_description"
    android:defaultValue="1500" 
    android:key="buffering" 
    android:title="Buffering" 
    android:inputType="number"
    android:summary="% milliseconds"
    />  
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_behaviour">
        <CheckBoxPreference
    android:key="notification"
    android:title="@string/preferences_notifications"
    android:summary="@string/preferences_notifications_desc"
    android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>
